# service_bot

./: Dockerfile  docker-compose.yaml  pyproject.toml
service_bot/: __init__.py  main.py
service_bot/core/: message_handler.py
service_bot/database/: __init__.py  base.py  models.py
service_bot/tools/: __init__.py  db_conf.py  token_conf.py
tests/: tests.py
