[tool.poetry]
name = "service-bot"
version = "0.1.0"
description = ""
authors = ["BimBimBamBam1337 <a94440003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.15.0"
apscheduler = "^3.11.0"
pytest = "^8.3.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
pydantic = "<2.10"
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pytest-asyncio = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
